Atualizado com o bundle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <section class="notes"></section>
         </main>
 
-        <script src="lib/scripts.js"></script>
+        <script src="dist/bundle.js"></script>
     </body>
 </html>
